--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,6 +14,21 @@
 
 <body>
 
+	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+		<span class="navbar-text"> 🥝 </span>
+		<ul class="navbar-nav">
+
+			<!-- IMPORTANTE REVISAR LINKS -->
+
+			<li class="nav-item"><a class="nav-link"
+				href="index.html">Home</a></li>
+			<li class="nav-item"><a class="nav-link"
+				href="event_list.jsp">Explore</a></li>
+			<li class="nav-item"><a class="nav-link"
+				href="form_event.html">Create</a></li>
+		</ul>
+	</nav>
+
 	<div class="jumbotron text-center">
 		<h1>🥝KIWI🥝</h1>
 		<p>Mashup de herramientas indispensables para una organización
