--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,28 +23,6 @@ body {
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
-<<<<<<< HEAD
-	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-		<span class="navbar-text"> 🥝 </span>
-		<ul class="navbar-nav">
-
-			<!-- IMPORTANTE REVISAR LINKS -->
-
-			<li class="nav-item"><a class="nav-link"
-				href="index.html">Home</a></li>
-			<li class="nav-item"><a class="nav-link"
-				href="event_list.jsp">Explore</a></li>
-			<li class="nav-item"><a class="nav-link"
-				href="form_event.html">Create</a></li>
-		</ul>
-	</nav>
-
-	<div class="jumbotron text-center">
-		<h1>🥝KIWI🥝</h1>
-		<p>Mashup de herramientas indispensables para una organización
-			impecable de hackathones! 👌</p>
-	</div>
-=======
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
 		<span class="navbar-text"> 🥝 </span>
 		<ul class="navbar-nav">
@@ -63,7 +41,6 @@ body {
 			<p>Mashup de herramientas indispensables para una organización
 				impecable de hackathones! 👌</p>
 		</div>
->>>>>>> 3a81937309aba25648add62d45986343e24e985a
 
 		<div class="row">
 			<div class="col-lg-4">
@@ -139,11 +116,11 @@ body {
 				<p>En esta sección podrás explorar todos los eventos disponibles
 					en nuestra aplicación e inscribirte en el que más te interese. ¡No
 					te pierdas el próximo hackathon!</p>
-				<a href="https://kiwi-aiss.appspot.com/event_list.jsp"
+				<a href="./event_list.jsp"
 					class="btn btn-dark" role="button">Ir al sitio</a>
 			</div>
 			<div class="col-lg-4">
-				<a href="https://kiwi-aiss.appspot.com/event_list.jsp"><img
+				<a href="./event_list.jsp"><img
 					alt="explore" src="./img/explore.jpg" width="100%" height=auto></a>
 			</div>
 		</div>
@@ -156,7 +133,7 @@ body {
 
 		<div class="row">
 			<div class="col-lg-4">
-				<a href="https://kiwi-aiss.appspot.com/form_event.html"><img
+				<a href="./form_event.html"><img
 					alt="explore" src="./img/create.jpg" width="100%" height=auto></a>
 			</div>
 			<div class="col-lg-8 border border-danger rounded"
@@ -165,9 +142,9 @@ body {
 				<br>
 				<p>En esta sección podrás crear tu propio evento para hackathon,
 					pudiendo disfrutar de las facilidades de la creación automatizada
-					de parte de Kiwi de un repositorio propio en Git Hub y un evento en
+					de parte de Kiwi de un repositorio propio en GitHub y un evento en
 					Google Calendar.</p>
-				<a href="https://kiwi-aiss.appspot.com/form_event.html"
+				<a href="./form_event.html"
 					class="btn btn-dark" role="button">Ir al sitio</a>
 			</div>
 
