--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -20,12 +20,11 @@
 
 			<!-- IMPORTANTE REVISAR LINKS -->
 
+			<li class="nav-item"><a class="nav-link" href="index.jsp">Home</a></li>
 			<li class="nav-item"><a class="nav-link"
-				href="index.html">Home</a></li>
+				href="EventListView.jsp">Explore</a></li>
 			<li class="nav-item"><a class="nav-link"
-				href="event_list.jsp">Explore</a></li>
-			<li class="nav-item"><a class="nav-link"
-				href="form_event.html">Create</a></li>
+				href="FormEventView.jsp">Create</a></li>
 		</ul>
 	</nav>
 
