Add padding-top to all views' jumbotron
This fixes weird looking jumbotron in all the views
that have one.

--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -28,7 +28,7 @@
 		</ul>
 	</nav>
 
-	<div class="jumbotron text-center">
+	<div class="jumbotron text-center" style="padding-top: 6%;">
 		<h1>🥝KIWI🥝</h1>
 		<p>Mashup de herramientas indispensables para una organización
 			impecable de hackathones! 👌</p>
